tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_resolve_unresolved_var/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: cannot find `z` in this scope
  ┌─ src/main.nr:4:25
  │
4 │             assert(y == z);
  │                         - not found in this scope
  │

Aborting due to 1 previous error
