tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_resolve_unresolved_var/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: cannot find `z` in this scope
  ┌─ src/main.nr:4:25
  │
4 │             assert(y == z);
  │                         - not found in this scope
  │

Aborting due to 1 previous error
